fixing overlapping of img curves

--- a/styles/AboutMe.css
+++ b/styles/AboutMe.css
@@ -87,7 +87,7 @@
   justify-content: center;
   align-items: center;
   margin: 0 0 50px;
-  margin-top: -80px;
+  margin-top: -84px;
 }
 .about-me-parent {
   max-width: 1000px;
