--- a/styles/ContactMe.css
+++ b/styles/ContactMe.css
@@ -1,6 +1,6 @@
 .main-container{
   min-height: 100vh;
-  margin: 0px 0 -450px;
+  margin: -3px 0 -450px;
   background: var(--white);
   padding-top: 70px;
 }
